Atualizing HAR and forecasting files

--- a/har/har.ipynb
+++ b/har/har.ipynb
@@ -35,9 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('MotionSense-balanced_20Hz-v1/train.csv') \n",
-    "validation = pd.read_csv('MotionSense-balanced_20Hz-v1/validation.csv')\n",
-    "test = pd.read_csv('MotionSense-balanced_20Hz-v1/test.csv') "
+    "train = pd.read_csv('MotionSense/train.csv') \n",
+    "validation = pd.read_csv('MotionSense/validation.csv')\n",
+    "test = pd.read_csv('MotionSense/test.csv') "
    ]
   },
   {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,16 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8392156862745098"
+       "0.8303921568627451"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,16 +210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8399893535896565"
+       "0.8313731520895119"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
