Adding SVM classifier

--- a/har/har.ipynb
+++ b/har/har.ipynb
@@ -229,11 +229,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Applying the Support Vector Machines Classifier"
+   ]
   }
  ],
  "metadata": {
