--- a/har/har.ipynb
+++ b/har/har.ipynb
@@ -11,13 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
     "from sklearn.metrics import f1_score\n",
     "from sklearn.metrics import accuracy_score\n"
    ]
@@ -176,9 +177,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf = RandomForestClassifier(n_estimators=1000)\n",
-    "clf.fit(X_train, y_train)\n",
-    "y_predict = clf.predict(X_test)"
+    "clf_rf = RandomForestClassifier(n_estimators=1000)\n",
+    "clf_rf.fit(X_train, y_train)\n",
+    "y_predict_rf = clf_rf.predict(X_test)"
    ]
   },
   {
@@ -190,49 +191,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.8303921568627451"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random Forest\n",
+      "Accuracy = 0.8303921568627451\n",
+      "F1-Score = 0.8313731520895119\n"
+     ]
     }
    ],
    "source": [
-    "accuracy_score(y_test, y_predict)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.8313731520895119"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f1_score(y_test, y_predict, average='weighted')"
+    "acc_rf = accuracy_score(y_test, y_predict_rf)\n",
+    "f1_score_rf = f1_score(y_test, y_predict_rf, average='weighted')\n",
+    "print('Random Forest')\n",
+    "print('Accuracy = {}'.format(acc_rf))\n",
+    "print('F1-Score = {}'.format(f1_score_rf))\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Applying the Support Vector Machines Classifier"
+    "Applying the Support Vector Machine Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf_svc = SVC()\n",
+    "clf_svc.fit(X_train, y_train)\n",
+    "y_predict_svc = clf_svc.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Support Vector Machine\n",
+      "Accuracy = 0.5607843137254902\n",
+      "F1-Score = 0.5365497958259012\n"
+     ]
+    }
+   ],
+   "source": [
+    "acc_svc = accuracy_score(y_test, y_predict_svc)\n",
+    "f1_score_svc = f1_score(y_test, y_predict_svc, average='weighted')\n",
+    "print('Support Vector Machine')\n",
+    "print('Accuracy = {}'.format(acc_svc))\n",
+    "print('F1-Score = {}'.format(f1_score_svc))"
    ]
   }
  ],
